// ------------------------------------------------------------------
// TRANSACTION MODEL
// ------------------------------------------------------------------
model Consultation {
  id   String  @id @default(cuid())
  trId String? @unique @default(dbgenerated("generate_custom_id('TR')"))

  // Main Fields
  status           TransactionStatus
  type             ConsultationType
  patientNote      String?
  nutritionistNote String?

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Relations
  patient              Patient?              @relation(fields: [patientId], references: [id], onDelete: Cascade)
  nutritionist         Nutritionist?         @relation(fields: [nutritionistId], references: [id], onDelete: Cascade)
  consultationTime     ConsultationTime?
  transactionPrice     TransactionPrice?
  transactionPayment   TransactionPayment?
  consultationReview   ConsultationReview?
  medicalRecordHistory MedicalRecordHistory?

  // Foreign Keys
  patientId      String?
  nutritionistId String?
}

// ------------------------------------------------------------------
// CONSULTATION TIME MODEL
// ------------------------------------------------------------------
model ConsultationTime {
  id String @id @default(cuid())

  // Main Fields
  start    DateTime?
  end      DateTime?
  duration Int?

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Relations
  consultation Consultation? @relation(fields: [consultationId], references: [id], onDelete: Cascade)

  // Foreign Keys
  consultationId String? @unique
}

// ------------------------------------------------------------------
// TRANSACTION PRICE MODEL
// ------------------------------------------------------------------
model TransactionPrice {
  id String @id @default(cuid())

  // Main Fields
  sources  PaymentSource[]
  price    Int
  subTotal Int
  credit   Int?            @default(0)
  total    Int

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Relations
  consultation Consultation? @relation(fields: [consultationId], references: [id], onDelete: Cascade)

  // Foreign Keys
  consultationId String? @unique
}

// ------------------------------------------------------------------
// TRANSACTION PAYMENT MODEL
// ------------------------------------------------------------------
model TransactionPayment {
  id String @id @default(cuid())

  // Main Fields
  midtransSnapToken   String?
  midtransRedirectUrl String?
  method              String?
  code                String?
  status              String?
  date                DateTime?

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Relations
  consultation Consultation? @relation(fields: [consultationId], references: [id], onDelete: Cascade)

  // Foreign Keys
  consultationId String? @unique
}

// ------------------------------------------------------------------
// CONSULTATION REVIEW MODEL
// ------------------------------------------------------------------
model ConsultationReview {
  id String @id @default(cuid())

  // Main Fields
  rating      Float
  description String?
  isAnonymous Boolean? @default(false)

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Relations
  consultation Consultation? @relation(fields: [consultationId], references: [id], onDelete: Cascade)

  // Foreign Keys
  consultationId String? @unique
}
