// ------------------------------------------------------------------
// CREDIT MODEL
// ------------------------------------------------------------------
model Credit {
  id String @id @default(cuid())

  // Main Fields
  balance Int? @default(0)

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Relations
  patient         Patient?        @relation(fields: [patientId], references: [id], onDelete: Cascade)
  creditHistories CreditHistory[]

  // Foreign Keys
  patientId String? @unique
}

// ------------------------------------------------------------------
// CREDIT HISTORY MODEL
// ------------------------------------------------------------------
model CreditHistory {
  id String @id @default(cuid())

  // Main Fields
  action CreditAction
  amount Int
  note   String?

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Relations
  credit Credit? @relation(fields: [creditId], references: [id], onDelete: Cascade)

  // Foreign Keys
  creditId String?
}
