model DeviceInfo {
  id String @id @default(cuid())

  device   String?
  fcmToken String?

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Foreign Keys
  accountId String? @unique

  // Relations
  account Account? @relation(fields: [accountId], references: [id], onDelete: Cascade)
}

model NutritionistSystemSetting {
  id String @id @default(cuid())

  isAutoAvailable Boolean? @default(true)

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Relations
  nutritionist Nutritionist? @relation(fields: [nutritionistId], references: [id], onDelete: Cascade)

  // Foreign Keys
  nutritionistId String? @unique
}
