// ------------------------------------------------------------------
// PATIENT MODEL
// ------------------------------------------------------------------
model Patient {
  id String @id @default(cuid())

  // Date Metadata
  createdAt DateTime? @default(now())
  updatedAt DateTime? @updatedAt

  // Relations
  account          Account?          @relation(fields: [accountId], references: [id], onDelete: Cascade)
  profile          Profile?          @relation(fields: [profileId], references: [id], onDelete: Cascade)
  medicalRecordKey MedicalRecordKey? @relation(fields: [medicalRecordKeyId], references: [id], onDelete: Cascade)
  credit           Credit?
  consultations    Consultation[]

  // Foreign Keys
  accountId          String? @unique
  profileId          String? @unique
  medicalRecordKeyId String? @unique
}
