//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  email String [unique, not null]
  password String
  refreshToken String [unique]
  lastActivity DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  roleId String
  patient Patient
  nutritionist Nutritionist
  sso SingleSignOn
  role Role
  deviceInfo DeviceInfo
}

Table Profile {
  id String [pk]
  name String [not null]
  gender Gender [not null]
  phoneNumber String
  address String
  placeOfBirth String
  dateOfBirth DateTime
  age Int
  imageKey String
  bio String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  patient Patient
  nutritionist Nutritionist
}

Table Admin {
  id String [pk]
  apiKey String [unique, not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Otp {
  id String [pk]
  email String [not null]
  code String [not null]
  purpose OtpPurpose [not null]
  expired DateTime [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table WorkspaceService {
  id String [pk]
  name String [not null]
  description String [not null]
  imageKey String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table BmiLimit {
  id String [pk]
  status BmiStatus [not null]
  min Float [not null]
  max Float [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Faq {
  id String [pk]
  question String [not null]
  answer String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table PrivacyPolicy {
  id String [pk]
  title String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Signature {
  id String [pk]
  signature String [unique, not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Consultation {
  id String [pk]
  trId String [unique]
  status TransactionStatus [not null]
  type ConsultationType [not null]
  patientNote String
  nutritionistNote String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  patient Patient
  nutritionist Nutritionist
  consultationTime ConsultationTime
  transactionPrice TransactionPrice
  transactionPayment TransactionPayment
  consultationReview ConsultationReview
  medicalRecordHistory MedicalRecordHistory
  patientId String
  nutritionistId String
}

Table ConsultationTime {
  id String [pk]
  start DateTime
  end DateTime
  duration Int
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  consultation Consultation
  consultationId String [unique]
}

Table TransactionPrice {
  id String [pk]
  sources PaymentSource[] [not null]
  price Int [not null]
  subTotal Int [not null]
  credit Int [default: 0]
  total Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  consultation Consultation
  consultationId String [unique]
}

Table TransactionPayment {
  id String [pk]
  midtransSnapToken String
  midtransRedirectUrl String
  method String
  code String
  status String
  date DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  consultation Consultation
  consultationId String [unique]
}

Table ConsultationReview {
  id String [pk]
  rating Float [not null]
  description String
  isAnonymous Boolean [default: false]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  consultation Consultation
  consultationId String [unique]
}

Table Credit {
  id String [pk]
  balance Int [default: 0]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  patient Patient
  creditHistories CreditHistory [not null]
  patientId String [unique]
}

Table CreditHistory {
  id String [pk]
  action CreditAction [not null]
  amount Int [not null]
  note String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  credit Credit
  creditId String
}

Table DeviceInfo {
  id String [pk]
  device String
  fcmToken String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  accountId String [unique]
  account Account
}

Table NutritionistSystemSetting {
  id String [pk]
  isAutoAvailable Boolean [default: true]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  nutritionist Nutritionist
  nutritionistId String [unique]
}

Table MedicalRecordKey {
  id String [pk]
  code String [unique]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  patient Patient
  patientDetail PatientDetail
  medicalRecordHistories MedicalRecordHistory [not null]
}

Table PatientDetail {
  id String [pk]
  name String
  gender Gender
  dateOfBirth DateTime
  age Int
  activityLevel PatientActivity
  dailyCalories Int
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  medicalRecordKey MedicalRecordKey
  anthropometric Anthropometric
  nutritionCarePlan NutritionCarePlan
  medicalRecordKeyId String [unique]
  anthropometricId String [unique]
  nutritionCarePlanId String [unique]
}

Table MedicalRecordHistory {
  id String [pk]
  diagnosis String
  notes String
  others String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  medicalRecordKey MedicalRecordKey
  anthropometric Anthropometric
  dietaryAssessment DietaryAssessment
  gastrointestinalRecord GastrointestinalRecord
  consultation Consultation
  medicalRecordKeyId String
  anthropometricId String [unique]
  dietaryAssessmentId String [unique]
  gastrointestinalRecordId String [unique]
  consultationId String [unique]
}

Table Anthropometric {
  id String [pk]
  height Int
  weight Int
  bmi Float
  bmiStatus BmiStatus
  fatPercentage Float
  muscleMass Float
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  medicalRecordHistory MedicalRecordHistory
  patientDetail PatientDetail
}

Table DietaryAssessment {
  id String [pk]
  usualDiet String
  caloricIntake Int
  proteinIntake Int
  carbohydrateIntake Int
  fatIntake Int
  fiberIntake Int
  waterIntake Int
  foodAllergies String
  supplements String
  foodPreferences String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  medicalRecordHistory MedicalRecordHistory
}

Table GastrointestinalRecord {
  id String [pk]
  disability String
  allergies String
  foodPreferences String
  foodAvoidances String
  appetite String
  diarrhea Boolean [default: false]
  constipation Boolean [default: false]
  vomit Boolean [default: false]
  nausea Boolean [default: false]
  bloating Boolean [default: false]
  swallowingDisorder Boolean [default: false]
  chewingDisorder Boolean [default: false]
  suckingDisorder Boolean [default: false]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  medicalRecordHistory MedicalRecordHistory
}

Table NutritionCarePlan {
  id String [pk]
  dietPlan DietPlan
  dietGoal DietGoal
  dietPlanDescription String
  exerciseGuidelines String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  patientDetail PatientDetail
}

Table Nutritionist {
  id String [pk]
  type NutritionistType
  nip String
  nidn String
  isAvailable Boolean [default: false]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  account Account
  profile Profile
  consultationMeta ConsultationMeta
  occupation Occupation
  price Price
  registrationCertificate RegistrationCertificate
  schedules Schedule [not null]
  consultations Consultation [not null]
  nutritionistSystemSetting NutritionistSystemSetting
  accountId String [unique]
  profileId String [unique]
}

Table ConsultationMeta {
  id String [pk]
  avgRating Float [default: 0]
  consultation Int [default: 0]
  successConsultation Int [default: 0]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  nutritionist Nutritionist
  nutritionistId String [unique]
}

Table RegistrationCertificate {
  id String [pk]
  registrationNumber String [unique, not null]
  issueDate DateTime
  validUntil DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  nutritionist Nutritionist
  nutritionistId String [unique]
}

Table Occupation {
  id String [pk]
  name String [not null, default: 'Konselor Gizi']
  workPlace String [not null, default: 'TEFA NCC Polije']
  experience Int [default: 0]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  nutritionist Nutritionist
  nutritionistId String [unique]
}

Table Price {
  id String [pk]
  online Int [not null]
  offline Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  nutritionist Nutritionist
  nutritionistId String [unique]
}

Table Schedule {
  id String [pk]
  dayOfWeek DayOfWeek [not null]
  dayOfWeekIndex Int [not null]
  active Boolean [not null, default: true]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  nutritionist Nutritionist
  scheduleTimes ScheduleTime [not null]
  nutritionistId String

  indexes {
    (nutritionistId, dayOfWeek) [unique]
  }
}

Table ScheduleTime {
  id String [pk]
  start DateTime [not null]
  end DateTime [not null]
  active Boolean [not null, default: true]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  schedule Schedule
  scheduleId String
}

Table Patient {
  id String [pk]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  account Account
  profile Profile
  medicalRecordKey MedicalRecordKey
  credit Credit
  consultations Consultation [not null]
  accountId String [unique]
  profileId String [unique]
  medicalRecordKeyId String [unique]
}

Table BasePermission {
  id String [pk]
  key String [unique, not null]
  description String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  rolePermissions RolePermission [not null]
}

Table Role {
  id String [pk]
  accountRole AccountRole [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  accountId String [unique]
  permissions RolePermission [not null]
  account Account
}

Table RolePermission {
  id String [pk]
  isPermitted Boolean [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  roleId String
  role Role
  permission BasePermission
  basePermissionId String
}

Table SingleSignOn {
  id String [pk]
  googleSSO GoogleSSO
  account Account
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  accountId String [unique]
}

Table GoogleSSO {
  id String [pk]
  googleId String [unique, not null]
  email String [unique, not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  ssoId String [unique]
  sso SingleSignOn
}

Enum AccountRole {
  ADMIN
  PATIENT
  NUTRITIONIST
}

Enum Gender {
  MALE
  FEMALE
}

Enum ConsultationType {
  ONLINE
  OFFLINE
}

Enum TransactionStatus {
  WAITING_PAYMENT
  WAITING_CONFIRMATION
  SCHEDULED
  ON_PROCESS
  FINISHED
  RE_SCHEDULED
  CANCELED
  CANCELED_PAYMENT
}

Enum OtpPurpose {
  AUTH
  AUTH_REGISTER
  AUTH_FORGOT_PASSWORD
  ACCOUNT
  ACCOUNT_CHANGE_PASSWORD
}

Enum DayOfWeek {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}

Enum CreditAction {
  TOPUP
  PAY_CONSULTATION
  REFUND
}

Enum PatientActivity {
  SEDENTARY
  LIGHTLY_ACTIVE
  MODERATELY_ACTIVE
  VERY_ACTIVE
  SUPER_ACTIVE
}

Enum DietPlan {
  WEIGHT_LOSS
  WEIGHT_GAIN
  MAINTAIN
}

Enum DietGoal {
  FAT_LOSS
  MUSCLE_GAIN
  MAINTAIN
}

Enum BmiStatus {
  UNDERWEIGHT
  NORMAL
  OVERWEIGHT
  OBESE
  OBESE_II
  OBESE_III
}

Enum NutritionistType {
  COUNSELOR
  EXPERT
}

Enum PaymentSource {
  CREDIT
  MIDTRANS
}

Ref: Consultation.patientId > Patient.id [delete: Cascade]

Ref: Consultation.nutritionistId > Nutritionist.id [delete: Cascade]

Ref: ConsultationTime.consultationId - Consultation.id [delete: Cascade]

Ref: TransactionPrice.consultationId - Consultation.id [delete: Cascade]

Ref: TransactionPayment.consultationId - Consultation.id [delete: Cascade]

Ref: ConsultationReview.consultationId - Consultation.id [delete: Cascade]

Ref: Credit.patientId - Patient.id [delete: Cascade]

Ref: CreditHistory.creditId > Credit.id [delete: Cascade]

Ref: DeviceInfo.accountId - Account.id [delete: Cascade]

Ref: NutritionistSystemSetting.nutritionistId - Nutritionist.id [delete: Cascade]

Ref: PatientDetail.medicalRecordKeyId - MedicalRecordKey.id [delete: Cascade]

Ref: PatientDetail.anthropometricId - Anthropometric.id [delete: Cascade]

Ref: PatientDetail.nutritionCarePlanId - NutritionCarePlan.id [delete: Cascade]

Ref: MedicalRecordHistory.medicalRecordKeyId > MedicalRecordKey.id [delete: Cascade]

Ref: MedicalRecordHistory.anthropometricId - Anthropometric.id [delete: Cascade]

Ref: MedicalRecordHistory.dietaryAssessmentId - DietaryAssessment.id [delete: Cascade]

Ref: MedicalRecordHistory.gastrointestinalRecordId - GastrointestinalRecord.id [delete: Cascade]

Ref: MedicalRecordHistory.consultationId - Consultation.id [delete: Cascade]

Ref: Nutritionist.accountId - Account.id [delete: Cascade]

Ref: Nutritionist.profileId - Profile.id [delete: Cascade]

Ref: ConsultationMeta.nutritionistId - Nutritionist.id [delete: Cascade]

Ref: RegistrationCertificate.nutritionistId - Nutritionist.id [delete: Cascade]

Ref: Occupation.nutritionistId - Nutritionist.id [delete: Cascade]

Ref: Price.nutritionistId - Nutritionist.id [delete: Cascade]

Ref: Schedule.nutritionistId > Nutritionist.id [delete: Cascade]

Ref: ScheduleTime.scheduleId > Schedule.id [delete: Cascade]

Ref: Patient.accountId - Account.id [delete: Cascade]

Ref: Patient.profileId - Profile.id [delete: Cascade]

Ref: Patient.medicalRecordKeyId - MedicalRecordKey.id [delete: Cascade]

Ref: Role.accountId - Account.id [delete: Cascade]

Ref: RolePermission.roleId > Role.id [delete: Cascade]

Ref: RolePermission.basePermissionId > BasePermission.id [delete: Cascade]

Ref: SingleSignOn.accountId - Account.id [delete: Cascade]

Ref: GoogleSSO.ssoId - SingleSignOn.id [delete: Cascade]